FIx bug overflow

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -46,6 +46,8 @@
 
         grid-template-areas: 'content';
         grid-template-columns: 100%;
+
+        overflow-x: hidden;
     }
 
     .layout__menu-toggle{
